# sts2-card-pickrate-analyzer

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  FILE_GUIDE.md  MVP_DESIGN.md  RAILWAY_CHECKLIST.md  README.md  README_DEPLOY.md  UPLOADER_README.md  WORKFLOW.md  analyze_runs.py  bandwidth_recommendations.md  card_pickrate_analysis.py  examine_run_structure.py  generate_all_analyses.py  optimize_bandwidth.py  pyproject.toml  start_viz.sh  sts2_uploader.py  sync_runs.sh  upload_runs.py  visualize_pickrates.py
backend/: .env.example  README.md  SETUP_GUIDE.md  admin_cli.py  analytics_engine.py  auth.py  card_coordinates.py  card_metadata.py  compression.py  config.py  create_admin.py  database.py  debug_user.py  init_db.py  main.py  migrate_compress_runs.py  models.py  nixpacks.toml  requirements.txt  reset_password.py  schemas.py  start.sh  test_api.py
backend/routers/: analytics.py  auth.py  runs.py  steam.py
frontend/: glossary.js  index.html  server.py  styles.css
frontend/components/: CardDetail.js  CardList.js  CardScatterPlot.js  ChartComponent.js  FilterBar.js  HelpPanel.js  InfoIcon.js  MetadataBar.js  PickRateTab.js  SkipRateChart.js  SkipRateTab.js  VisualizationTab.js  WinRateChart.js  WinRateTab.js  config.js
mbgg_sts2_uploader/: __init__.py  cli.py
pickrate-viz/: README.md  index.html
