[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbgg-sts2-uploader"
version = "0.2.3"
description = "Upload your Slay the Spire 2 runs to mbgg analytics server"
readme = "UPLOADER_README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Andrew Guo", email = "andrew.guo5@gmail.com"}
]
keywords = ["slay-the-spire-2", "sts2", "analytics", "gaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://mbgg.up.railway.app"
Repository = "https://github.com/andrewguo5/sts2-card-pickrate-analyzer"

[project.scripts]
mbgg-sts2-upload = "mbgg_sts2_uploader.cli:main"

[tool.setuptools.packages.find]
include = ["mbgg_sts2_uploader*"]
exclude = ["backend*", "frontend*", "run_history_data*", "pickrate-viz*"]
